fix image stretching in mobile phones

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -300,5 +300,6 @@ img {
   }
   img {
     margin: auto;
+    object-fit: contain;
   }
 }
